compiler/tests/fixtures/invalid/semantics/sifting_group_action_role_missing_n.viv
// Group action role with * but no n: field (max defaults to 1, which conflicts with *)

action foo:
    roles:
        @doer:
            as: initiator


pattern bad:
    roles:
        @p:
            as: character
    actions:
        @acts*:
            from: @p.memories
